force-app/main/default/objects/SLA_OLA__c/SLA_OLA__c.object-meta.xml
<CustomObject>
    <label>SLA OLA</label>
    <nameField>
        <displayFormat>OLA-{00000}</displayFormat>
        <label>SLA OLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA OLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>