force-app/main/default/objects/SLA_OLA__c/fields/Agent_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Agent_Level_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>