force-app/main/default/objects/SLA_OLA__c/fields/Agent_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Agent_Level_3__c</fullName>
    <label>Agent Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>