force-app/main/default/objects/SLA_OLA__c/fields/Agent_SLA__c.field-meta.xml
<CustomField>
    <fullName>Agent_SLA__c</fullName>
    <label>Agent OLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>