force-app/main/default/objects/SLA_OLA__c/fields/Agent_SLA_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Agent_SLA_Escalation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent OLA Escalation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>