force-app/main/default/objects/SLA_OLA__c/fields/Case_Type_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Ticket__c</fullName>
    <label>Case Type Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>