force-app/main/default/objects/SLA_OLA__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>