force-app/main/default/objects/SLA_OLA__c/fields/flag_returned_ticket__c.field-meta.xml
<CustomField>
    <fullName>flag_returned_ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>flag returned ticket</label>
    <type>Checkbox</type>
</CustomField>