force-app/main/default/objects/SLA_OLA__c/fields/Level_1_Escalation_Team__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Escalation_Team__c</fullName>
    <label>Level 1 Escalation Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>