force-app/main/default/objects/SLA_OLA__c/fields/Level_2_Escalation_Team__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Escalation_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Level 2 Escalation Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>