force-app/main/default/objects/SLA_OLA__c/fields/Melebihi_Agent_OLA__c.field-meta.xml
<CustomField>
    <fullName>Melebihi_Agent_OLA__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Tanggal_Target_Agent_SLA__c)),
    IF(
        NOT(ISBLANK(Tanggal_Penyelesaian_Agent_OLA__c)),
        DATETIMEVALUE(
            MID(Tanggal_Penyelesaian_Agent_OLA__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Penyelesaian_Agent_OLA__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Penyelesaian_Agent_OLA__c, 1, 2) &amp; &quot; &quot; &amp;
            MID(Tanggal_Penyelesaian_Agent_OLA__c, 12, 8)
        ) &gt; DATETIMEVALUE(
            MID(Tanggal_Target_Agent_SLA__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Agent_SLA__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Agent_SLA__c, 1, 2) &amp; &quot; &quot; &amp;
            MID(Tanggal_Target_Agent_SLA__c, 12, 8)
        ),
        NOW() &gt; DATETIMEVALUE(
            MID(Tanggal_Target_Agent_SLA__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Agent_SLA__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Agent_SLA__c, 1, 2) &amp; &quot; &quot; &amp;
            MID(Tanggal_Target_Agent_SLA__c, 12, 8)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Melebihi Agent OLA</label>
    <type>Checkbox</type>
</CustomField>