force-app/main/default/objects/SLA_OLA__c/fields/Melebihi_OLA_2__c.field-meta.xml
<CustomField>
    <fullName>Melebihi_OLA_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Melebihi OLA 2</label>
    <type>Checkbox</type>
</CustomField>