force-app/main/default/objects/SLA_OLA__c/fields/Melebihi_Ola_2_Formula__c.field-meta.xml
<CustomField>
    <fullName>Melebihi_Ola_2_Formula__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Tanggal_Target_2__c)),
    
    IF(
        NOT(ISBLANK(Tanggal_Penyelesaian_2__c)),
        
        DATETIMEVALUE(
            MID(Tanggal_Penyelesaian_2__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Penyelesaian_2__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Penyelesaian_2__c, 1, 2) &amp; &quot; &quot; &amp;
            &quot;00:00:00&quot;
        ) &gt; 
        DATETIMEVALUE(
            MID(Tanggal_Target_2__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_2__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_2__c, 1, 2) &amp; &quot; &quot; &amp;
            &quot;00:00:00&quot;
        ),
        
        IF(
            Case_Status__c = &quot;Working&quot;,
            FALSE,
            NOW() &gt; 
            DATETIMEVALUE(
                MID(Tanggal_Target_2__c, 7, 4) &amp; &quot;-&quot; &amp;
                MID(Tanggal_Target_2__c, 4, 2) &amp; &quot;-&quot; &amp;
                MID(Tanggal_Target_2__c, 1, 2) &amp; &quot; &quot; &amp;
                &quot;00:00:00&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Melebihi OLA 2</label>
    <type>Checkbox</type>
</CustomField>