force-app/main/default/objects/SLA_OLA__c/fields/Melebihi_Total_OLA__c.field-meta.xml
<CustomField>
    <fullName>Melebihi_Total_OLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Melebihi Total OLA</label>
    <type>Checkbox</type>
</CustomField>