force-app/main/default/objects/SLA_OLA__c/fields/Melebihi_Waiting_Document__c.field-meta.xml
<CustomField>
    <fullName>Melebihi_Waiting_Document__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Tanggal_Target_Waiting_Document__c)),
    IF(
        NOT(ISBLANK(Tanggal_Penyelesaian_Waiting_Document__c)),
        /* Jika ada tanggal penyelesaian, bandingkan tanggal penyelesaian dengan target */
        DATETIMEVALUE(
            MID(Tanggal_Penyelesaian_Waiting_Document__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Penyelesaian_Waiting_Document__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Penyelesaian_Waiting_Document__c, 1, 2) &amp; &quot; &quot; &amp;
            MID(Tanggal_Penyelesaian_Waiting_Document__c, 12, 8)
        ) &gt; DATETIMEVALUE(
            MID(Tanggal_Target_Waiting_Document__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Waiting_Document__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Waiting_Document__c, 1, 2) &amp; &quot; &quot; &amp;
            MID(Tanggal_Target_Waiting_Document__c, 12, 8)
        ),
        /* Jika tidak ada tanggal penyelesaian, bandingkan NOW dengan target */
        NOW() &gt; DATETIMEVALUE(
            MID(Tanggal_Target_Waiting_Document__c, 7, 4) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Waiting_Document__c, 4, 2) &amp; &quot;-&quot; &amp;
            MID(Tanggal_Target_Waiting_Document__c, 1, 2) &amp; &quot; &quot; &amp;
            MID(Tanggal_Target_Waiting_Document__c, 12, 8)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Melebihi Waiting Document</label>
    <type>Checkbox</type>
</CustomField>