force-app/main/default/objects/SLA_OLA__c/fields/Over_OLA_1__c.field-meta.xml
<CustomField>
    <fullName>Over_OLA_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Melebihi OLA 1</label>
    <type>Checkbox</type>
</CustomField>