force-app/main/default/objects/SLA_OLA__c/fields/return_flag__c.field-meta.xml
<CustomField>
    <fullName>return_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>return flag</label>
    <type>Checkbox</type>
</CustomField>