force-app/main/default/objects/SLA_OLA__c/fields/Tanggal_Penyelesaian_3__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Penyelesaian_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tanggal Penyelesaian 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>