force-app/main/default/objects/SLA_OLA__c/fields/Tanggal_Target_Agent_SLA__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Target_Agent_SLA__c</fullName>
    <label>Tanggal Target Agent OLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>