force-app/main/default/objects/SLA_OLA__c/fields/Tanggal_Total_Penyelesaian_SLA__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Total_Penyelesaian_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tanggal Total Penyelesaian SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>