force-app/main/default/objects/SLA_OLA__c/fields/Tanggal_Total_Target_SLA__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Total_Target_SLA__c</fullName>
    <label>Tanggal Total Target SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>