force-app/main/default/objects/SLA_OLA__c/fields/Target_1__c.field-meta.xml
<CustomField>
    <fullName>Target_1__c</fullName>
    <formula>text(Target_Number_1__c) &amp;&quot; &quot;&amp;&quot;Hari&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target 1</label>
    <type>Text</type>
</CustomField>