force-app/main/default/objects/SLA_OLA__c/fields/Target_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Target_Number_1__c</fullName>
    <label>Target Number 1</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>