force-app/main/default/objects/SLA_OLA__c/fields/Target_Penyelesaian_1__c.field-meta.xml
<CustomField>
    <fullName>Target_Penyelesaian_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Number 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>