force-app/main/default/objects/SLA_OLA__c/fields/Target_Penyelesaian_4__c.field-meta.xml
<CustomField>
    <fullName>Target_Penyelesaian_4__c</fullName>
    <label>Target 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>