force-app/main/default/objects/SLA_OLA__c/fields/Total_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Target__c</fullName>
    <label>Total Penyelesaian SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>