force-app/main/default/objects/SLA_OLA__c/fields/Total_Target_Penyelesaian_SLA__c.field-meta.xml
<CustomField>
    <fullName>Total_Target_Penyelesaian_SLA__c</fullName>
    <label>Total Target SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>