force-app/main/default/objects/SLA_OLA__c/fields/Waktu_Penyelesaian_1__c.field-meta.xml
<CustomField>
    <fullName>Waktu_Penyelesaian_1__c</fullName>
    <label>Penyelesaian 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>