force-app/main/default/objects/SLA_OLA__c/fields/Waktu_Penyelesaian_2__c.field-meta.xml
<CustomField>
    <fullName>Waktu_Penyelesaian_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Penyelesaian 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>