force-app/main/default/objects/SLA_OLA__c/recordTypes/Escalation.recordType-meta.xml
<RecordType>
    <fullName>Escalation</fullName>
    <active>true</active>
    <label>Escalation</label>
</RecordType>