force-app/main/default/objects/SLA_OLA__c/recordTypes/Return.recordType-meta.xml
<RecordType>
    <fullName>Return</fullName>
    <active>false</active>
    <label>Return</label>
</RecordType>