force-app/main/default/objects/SLA_OLA__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Case_Number__c</columns>
    <columns>Case_Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>